--- a/ensemble/xgb_ensemble-all.ipynb
+++ b/ensemble/xgb_ensemble-all.ipynb
@@ -222,251 +222,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "# find new rnd seed\n",
+    "# for i in range(50):\n",
+    "#     rnd = i*6\n",
+    "#     print(rnd)\n",
+    "#     cv_test(3,rnd,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# find new rnd seed\n",
+    "# for i in range(50):\n",
+    "#     rnd = i*6\n",
+    "#     print(rnd)\n",
+    "#     cv_test(5,rnd,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "local average valid loss 0.145866677952 val loss std 0.0337133401228\n",
-      "6\n",
-      "local average valid loss 0.151000133049 val loss std 0.0176700491043\n",
-      "12\n",
-      "local average valid loss 0.140975174603 val loss std 0.0197822648936\n",
-      "18\n",
-      "local average valid loss 0.147715408352 val loss std 0.0112063094976\n",
-      "24\n",
-      "local average valid loss 0.144434320449 val loss std 0.0155391819745\n",
-      "30\n",
-      "local average valid loss 0.148187370884 val loss std 0.0192206774681\n",
-      "36\n",
-      "local average valid loss 0.152259416391 val loss std 0.0339691591859\n",
-      "42\n",
+      "[0]\ttrain-logloss:0.63625\tvalid-logloss:0.639399\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[131]\ttrain-logloss:0.033839\tvalid-logloss:0.123685\n",
+      "\n",
+      "[0]\ttrain-logloss:0.635978\tvalid-logloss:0.639525\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[96]\ttrain-logloss:0.047042\tvalid-logloss:0.140829\n",
+      "\n",
+      "[0]\ttrain-logloss:0.635621\tvalid-logloss:0.639004\n",
+      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
+      "Stopping. Best iteration:\n",
+      "[75]\ttrain-logloss:0.059503\tvalid-logloss:0.151914\n",
+      "\n",
       "local average valid loss 0.140732382995 val loss std 0.0117262843428\n",
-      "48\n",
-      "local average valid loss 0.150008122301 val loss std 0.0293353223621\n",
-      "54\n",
-      "local average valid loss 0.139361062583 val loss std 0.0154661089693\n",
-      "60\n",
-      "local average valid loss 0.138519939534 val loss std 0.0134844661305\n",
-      "66\n",
-      "local average valid loss 0.145642976274 val loss std 0.012359701545\n",
-      "72\n",
-      "local average valid loss 0.148550231702 val loss std 0.0139217767581\n",
-      "78\n",
-      "local average valid loss 0.144192687695 val loss std 0.0110695363527\n",
-      "84\n",
-      "local average valid loss 0.141035345142 val loss std 0.0207435925379\n",
-      "90\n",
-      "local average valid loss 0.148614893862 val loss std 0.0285352055833\n",
-      "96\n",
-      "local average valid loss 0.143542803407 val loss std 0.0242193798817\n",
-      "102\n",
-      "local average valid loss 0.145925278227 val loss std 0.0349198197106\n",
-      "108\n",
-      "local average valid loss 0.147717373297 val loss std 0.0354378998533\n",
-      "114\n",
-      "local average valid loss 0.150291206514 val loss std 0.0317826072112\n",
-      "120\n",
-      "local average valid loss 0.150750258157 val loss std 0.0209613802711\n",
-      "126\n",
-      "local average valid loss 0.148718482618 val loss std 0.0371397194327\n",
-      "132\n",
-      "local average valid loss 0.144300689399 val loss std 0.00255359865133\n",
-      "138\n",
-      "local average valid loss 0.144903668344 val loss std 0.0363934914001\n",
-      "144\n",
-      "local average valid loss 0.146856204738 val loss std 0.0206179699463\n",
-      "150\n",
-      "local average valid loss 0.149605301879 val loss std 0.0223388105859\n",
-      "156\n",
-      "local average valid loss 0.138875287323 val loss std 0.0125734193406\n",
-      "162\n",
-      "local average valid loss 0.140618683267 val loss std 0.0337263569381\n",
-      "168\n",
-      "local average valid loss 0.15236667825 val loss std 0.0385428237235\n",
-      "174\n",
-      "local average valid loss 0.146224464708 val loss std 0.0177432143444\n",
-      "180\n",
-      "local average valid loss 0.147708686312 val loss std 0.011168110797\n",
-      "186\n",
-      "local average valid loss 0.143953679611 val loss std 0.0240352301276\n",
-      "192\n",
-      "local average valid loss 0.142714922205 val loss std 0.00886117919997\n",
-      "198\n",
-      "local average valid loss 0.152319974764 val loss std 0.0428361627895\n",
-      "204\n",
-      "local average valid loss 0.144865560928 val loss std 0.0246770076728\n",
-      "210\n",
-      "local average valid loss 0.143400857473 val loss std 0.00600896617376\n",
-      "216\n",
-      "local average valid loss 0.148990142176 val loss std 0.0266100058572\n",
-      "222\n",
-      "local average valid loss 0.151083129675 val loss std 0.0110753024001\n",
-      "228\n",
-      "local average valid loss 0.144820986109 val loss std 0.0125922299496\n",
-      "234\n",
-      "local average valid loss 0.15081963125 val loss std 0.014046189165\n",
-      "240\n",
-      "local average valid loss 0.144544020271 val loss std 0.0238050684822\n",
-      "246\n",
-      "local average valid loss 0.151452964641 val loss std 0.0169743590642\n",
-      "252\n",
-      "local average valid loss 0.137414263225 val loss std 0.00780035335958\n",
-      "258\n",
-      "local average valid loss 0.138476231432 val loss std 0.0244085973192\n",
-      "264\n",
-      "local average valid loss 0.145823320025 val loss std 0.00694764351271\n",
-      "270\n",
-      "local average valid loss 0.148280412026 val loss std 0.0190272322623\n",
-      "276\n",
-      "local average valid loss 0.143654600565 val loss std 0.021489486579\n",
-      "282\n",
-      "local average valid loss 0.141693544162 val loss std 0.0166475048806\n",
-      "288\n",
-      "local average valid loss 0.142222043601 val loss std 0.0250905516307\n",
-      "294\n",
-      "local average valid loss 0.151578541395 val loss std 0.0197013905647\n"
+      "         id  is_iceberg\n",
+      "0  5941774d    0.020095\n",
+      "1  4023181e    0.756191\n",
+      "2  b20200e4    0.032498\n",
+      "3  e7f018bb    0.997687\n",
+      "4  4371c8c3    0.131924\n",
+      "         id  is_iceberg\n",
+      "0  5941774d    0.019497\n",
+      "1  4023181e    0.743445\n",
+      "2  b20200e4    0.030779\n",
+      "3  e7f018bb    0.997727\n",
+      "4  4371c8c3    0.130642\n"
      ]
     }
    ],
    "source": [
-    "# find new rnd seed\n",
-    "for i in range(50):\n",
-    "    rnd = i*6\n",
-    "    print(rnd)\n",
-    "    cv_test(3,rnd,False)"
+    "cv_test(3,42,True,500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "local average valid loss 0.139841161703 val loss std 0.0391319834476\n",
-      "6\n",
-      "local average valid loss 0.143956969279 val loss std 0.0159588680688\n",
-      "12\n",
-      "local average valid loss 0.138732632956 val loss std 0.0250747364962\n",
-      "18\n",
-      "local average valid loss 0.143088039897 val loss std 0.00630852957126\n",
-      "24\n",
-      "local average valid loss 0.146124837712 val loss std 0.0082554884584\n",
-      "30\n",
-      "local average valid loss 0.144082709975 val loss std 0.011494115402\n",
-      "36\n",
-      "local average valid loss 0.145391927026 val loss std 0.026440015539\n",
-      "42\n",
-      "local average valid loss 0.137776919879 val loss std 0.0269819378445\n",
-      "48\n",
-      "local average valid loss 0.134990193269 val loss std 0.0392766942859\n",
-      "54\n",
-      "local average valid loss 0.137996396121 val loss std 0.0361318865052\n",
-      "60\n",
-      "local average valid loss 0.145544168721 val loss std 0.0210942061963\n",
-      "66\n",
-      "local average valid loss 0.134508066085 val loss std 0.0151440443714\n",
-      "72\n",
-      "local average valid loss 0.142278985135 val loss std 0.0190848555778\n",
-      "78\n",
-      "local average valid loss 0.144405404486 val loss std 0.0273958022606\n",
-      "84\n",
-      "local average valid loss 0.139814015767 val loss std 0.0190683601746\n",
-      "90\n",
-      "local average valid loss 0.144857670191 val loss std 0.0249510277852\n",
-      "96\n",
-      "local average valid loss 0.141943511087 val loss std 0.0229202042446\n",
-      "102\n",
-      "local average valid loss 0.135188295036 val loss std 0.042133602858\n",
-      "108\n",
-      "local average valid loss 0.135182763537 val loss std 0.0580051771719\n",
-      "114\n",
-      "local average valid loss 0.142960026834 val loss std 0.0361472547592\n",
-      "120\n",
-      "local average valid loss 0.136008935329 val loss std 0.0430511374403\n",
-      "126\n",
-      "local average valid loss 0.138520726268 val loss std 0.0368454192271\n",
-      "132\n",
-      "local average valid loss 0.144438692276 val loss std 0.0230692444268\n",
-      "138\n",
-      "local average valid loss 0.139672505678 val loss std 0.0400181822488\n",
-      "144\n",
-      "local average valid loss 0.149501232316 val loss std 0.0149451780372\n",
-      "150\n",
-      "local average valid loss 0.142507425169 val loss std 0.0286177458613\n",
-      "156\n",
-      "local average valid loss 0.136717922792 val loss std 0.0103037716997\n",
-      "162\n",
-      "local average valid loss 0.140963474111 val loss std 0.0323106959449\n",
-      "168\n",
-      "local average valid loss 0.144648607478 val loss std 0.0335439566358\n",
-      "174\n",
-      "local average valid loss 0.144583064085 val loss std 0.0183840353858\n",
-      "180\n",
-      "local average valid loss 0.141936531651 val loss std 0.0364061693618\n",
-      "186\n",
-      "local average valid loss 0.139311894799 val loss std 0.031926082211\n",
-      "192\n",
-      "local average valid loss 0.13912353085 val loss std 0.0149471403042\n",
-      "198\n",
-      "local average valid loss 0.141458767364 val loss std 0.0271237177798\n",
-      "204\n",
-      "local average valid loss 0.139590530463 val loss std 0.0179659937433\n",
-      "210\n",
-      "local average valid loss 0.139811452864 val loss std 0.0223302358676\n",
-      "216\n",
-      "local average valid loss 0.143679109243 val loss std 0.0263771351568\n",
-      "222\n",
-      "local average valid loss 0.142085119068 val loss std 0.0192021867751\n",
-      "228\n",
-      "local average valid loss 0.145701195937 val loss std 0.0185964262504\n",
-      "234\n",
-      "local average valid loss 0.149655206001 val loss std 0.0135972312753\n",
-      "240\n",
-      "local average valid loss 0.140326562575 val loss std 0.0313648431145\n",
-      "246\n",
-      "local average valid loss 0.14292757251 val loss std 0.0341495271879\n",
-      "252\n",
-      "local average valid loss 0.138276539753 val loss std 0.0137789313314\n",
-      "258\n",
-      "local average valid loss 0.13473804369 val loss std 0.0339620761795\n",
-      "264\n",
-      "local average valid loss 0.14587212646 val loss std 0.0193926439977\n",
-      "270\n",
-      "local average valid loss 0.140752758176 val loss std 0.0315918024429\n",
-      "276\n",
-      "local average valid loss 0.145001774971 val loss std 0.0241284201346\n",
-      "282\n",
-      "local average valid loss 0.140231518905 val loss std 0.0206026289143\n",
-      "288\n",
-      "local average valid loss 0.142222097277 val loss std 0.0246305942466\n",
-      "294\n",
-      "local average valid loss 0.14634468433 val loss std 0.0344636617517\n"
-     ]
-    }
-   ],
-   "source": [
-    "# find new rnd seed\n",
-    "for i in range(50):\n",
-    "    rnd = i*6\n",
-    "    print(rnd)\n",
-    "    cv_test(5,rnd,False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -518,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
