--- a/other_hand_features/prepare_other_feat_v2_all_feats.ipynb
+++ b/other_hand_features/prepare_other_feat_v2_all_feats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,20 @@
       "1           0  \n",
       "2           1  \n",
       "3           0  \n",
-      "4           0  \n"
+      "4           0  \n",
+      "                                              band_1  \\\n",
+      "0  [-15.863251, -15.201077, -17.887735, -19.17248...   \n",
+      "1  [-26.058969497680664, -26.058969497680664, -26...   \n",
+      "2  [-14.14109992980957, -15.064241409301758, -17....   \n",
+      "3  [-12.167478, -13.706167, -16.54837, -13.572674...   \n",
+      "4  [-23.37459373474121, -26.02718162536621, -28.1...   \n",
+      "\n",
+      "                                              band_2        id  inc_angle  \n",
+      "0  [-21.629612, -21.142353, -23.908337, -28.34524...  5941774d  34.966400  \n",
+      "1  [-25.754207611083984, -25.754207611083984, -25...  4023181e  32.615072  \n",
+      "2  [-14.74563980102539, -14.590410232543945, -14....  b20200e4  37.505433  \n",
+      "3  [-24.32222, -26.375538, -24.096739, -23.8769, ...  e7f018bb  34.473900  \n",
+      "4  [-25.72234344482422, -27.011577606201172, -23....  4371c8c3  43.918874  \n"
      ]
     }
    ],
@@ -37,6 +50,7 @@
     "train_df = pd.read_json('../input/train.json')\n",
     "test_df = pd.read_json('../input/test.json')\n",
     "print(train_df.head())\n",
+    "print(test_df.head())\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -47,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +87,7 @@
     "        img1 = np.array(row['band_1']).reshape(75, 75).astype('float32')\n",
     "        img2 = np.array(row['band_2']).reshape(75, 75).astype('float32')\n",
     "        if row['inc_angle'] == 'na':\n",
-    "            ang = 0\n",
+    "            ang = -1\n",
     "        else:\n",
     "            ang = float(row['inc_angle'])\n",
     "        img3 = (img1+img2)*ang/2.0\n",
@@ -123,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -290,16 +304,20 @@
      "output_type": "stream",
      "text": [
       "LogisticRegression(C=2.0, class_weight=None, dual=False, fit_intercept=True,\n",
-      "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+      "          intercept_scaling=1, max_iter=30, multi_class='ovr', n_jobs=1,\n",
       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
       "          verbose=0, warm_start=False)\n",
-      "this fold train loss 0.0761390803135 val loss 0.442114692358\n",
+      "this fold train loss 0.207241946492 val loss 0.286242288204\n",
       "============================\n",
-      "this fold train loss 0.0337175187437 val loss 0.702713639411\n",
+      "this fold train loss 0.21964769911 val loss 0.320364011012\n",
       "============================\n",
-      "this fold train loss 0.0724086099569 val loss 0.597712904333\n",
+      "this fold train loss 0.225364154965 val loss 0.279900130972\n",
       "============================\n",
-      "all avg 0.0607550696714 0.580847078701\n"
+      "this fold train loss 0.214315087908 val loss 0.290438618302\n",
+      "============================\n",
+      "this fold train loss 0.20934601504 val loss 0.29697624655\n",
+      "============================\n",
+      "all avg 0.215182980703 0.294784259008\n"
      ]
     }
    ],
@@ -307,16 +325,16 @@
     "# lr\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "lr_train,lr_pred = cv_feat(LogisticRegression,\n",
-    "                           fold_cnt=3,\n",
-    "                           params={'C':2.0,'max_iter':100},rnd=2)\n",
+    "                           fold_cnt=5,\n",
+    "                           params={'C':2.0,'max_iter':30},rnd=2)\n",
     "import pickle\n",
-    "with open('../features/other_model_lr7.pkl','wb') as fout:\n",
+    "with open('../2nd_features/other_model_lr7.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -329,17 +347,17 @@
       "            min_samples_leaf=1, min_samples_split=2,\n",
       "            min_weight_fraction_leaf=0.0, n_estimators=200, n_jobs=1,\n",
       "            oob_score=False, random_state=42, verbose=0, warm_start=False)\n",
-      "this fold train loss 0.128740787736 val loss 0.305932868302\n",
+      "this fold train loss 0.129296674685 val loss 0.30854446922\n",
       "============================\n",
-      "this fold train loss 0.124030235835 val loss 0.305320732207\n",
+      "this fold train loss 0.124918438728 val loss 0.306518453839\n",
       "============================\n",
-      "this fold train loss 0.127972092023 val loss 0.275160370834\n",
+      "this fold train loss 0.126731662737 val loss 0.273198313406\n",
       "============================\n",
-      "this fold train loss 0.121737927165 val loss 0.305756764667\n",
+      "this fold train loss 0.122876105306 val loss 0.306134897742\n",
       "============================\n",
-      "this fold train loss 0.121338976419 val loss 0.304676323654\n",
+      "this fold train loss 0.121726111663 val loss 0.307918551165\n",
       "============================\n",
-      "all avg 0.124764003836 0.299369411933\n"
+      "all avg 0.125109798624 0.300462937074\n"
      ]
     }
    ],
@@ -351,13 +369,13 @@
     "    'random_state':42\n",
     "}\n",
     "lr_train,lr_pred = cv_feat(RandomForestClassifier,fold_cnt=5,params=tmp_params)\n",
-    "with open('../features/other_model_rf7.pkl','wb') as fout:\n",
+    "with open('../2nd_features/other_model_rf7.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -372,17 +390,17 @@
       "              min_weight_fraction_leaf=0.0, n_estimators=200,\n",
       "              presort='auto', random_state=42, subsample=1.0, verbose=0,\n",
       "              warm_start=False)\n",
-      "this fold train loss 0.0281238220576 val loss 0.255942292154\n",
+      "this fold train loss 0.0283999852997 val loss 0.258734573524\n",
       "============================\n",
-      "this fold train loss 0.0304946134064 val loss 0.188922140755\n",
+      "this fold train loss 0.0307841721068 val loss 0.193073629645\n",
       "============================\n",
-      "this fold train loss 0.0281900251133 val loss 0.189564815278\n",
+      "this fold train loss 0.0278715195163 val loss 0.186784206681\n",
       "============================\n",
-      "this fold train loss 0.0281916011683 val loss 0.267575691488\n",
+      "this fold train loss 0.0292057013911 val loss 0.264800696067\n",
       "============================\n",
-      "this fold train loss 0.0243354680047 val loss 0.246977965575\n",
+      "this fold train loss 0.0244842934591 val loss 0.255111447009\n",
       "============================\n",
-      "all avg 0.0278671059501 0.22979658105\n"
+      "all avg 0.0281491343546 0.231700910585\n"
      ]
     }
    ],
@@ -399,13 +417,13 @@
     "                           params=tmp_params,\n",
     "                           rnd=1\n",
     "                          )\n",
-    "with open('../features/other_model_gbrt7.pkl','wb') as fout:\n",
+    "with open('../2nd_features/other_model_gbrt7.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -418,17 +436,17 @@
       "       n_jobs=1, nthread=None, objective='binary:logistic', random_state=0,\n",
       "       reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
       "       silent=True, subsample=1)\n",
-      "this fold train loss 0.02246326917 val loss 0.231757284542\n",
+      "this fold train loss 0.021899639521 val loss 0.236528103225\n",
       "============================\n",
-      "this fold train loss 0.0239874552491 val loss 0.181537029974\n",
+      "this fold train loss 0.0249325548873 val loss 0.183005113788\n",
       "============================\n",
-      "this fold train loss 0.026027627392 val loss 0.177070917681\n",
+      "this fold train loss 0.0252389829969 val loss 0.185084255211\n",
       "============================\n",
-      "this fold train loss 0.0219136759222 val loss 0.232186944644\n",
+      "this fold train loss 0.0226569409003 val loss 0.237792021364\n",
       "============================\n",
-      "this fold train loss 0.020677132659 val loss 0.254215241355\n",
+      "this fold train loss 0.0223828670976 val loss 0.254871491637\n",
       "============================\n",
-      "all avg 0.0230138320785 0.215353483639\n"
+      "all avg 0.0234221970806 0.219456197045\n"
      ]
     }
    ],
@@ -444,13 +462,13 @@
     "}\n",
     "lr_train,lr_pred = cv_feat(XGBClassifier,fold_cnt=5,\n",
     "                           params=tmp_params,rnd=1)\n",
-    "with open('../features/other_model_xgb7.pkl','wb') as fout:\n",
+    "with open('../2nd_features/other_model_xgb7.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0183686901417 val loss 0.223089667146\n",
+      "this fold train loss 0.0173393599209 val loss 0.238832237991\n",
       "============================\n"
      ]
     },
@@ -497,7 +515,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0198495049086 val loss 0.178964678422\n",
+      "this fold train loss 0.0198665303243 val loss 0.192208286688\n",
       "============================\n"
      ]
     },
@@ -515,7 +533,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0199706077022 val loss 0.195401615819\n",
+      "this fold train loss 0.0194814666523 val loss 0.178429272092\n",
       "============================\n"
      ]
     },
@@ -533,7 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0180027578754 val loss 0.238189771849\n",
+      "this fold train loss 0.0171481851864 val loss 0.237144395837\n",
       "============================\n"
      ]
     },
@@ -551,9 +569,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this fold train loss 0.0178435566771 val loss 0.261397357126\n",
+      "this fold train loss 0.0169822979942 val loss 0.251440546473\n",
       "============================\n",
-      "all avg 0.018807023461 0.219408618072\n"
+      "all avg 0.0181635680156 0.219610947816\n"
      ]
     }
    ],
@@ -566,7 +584,7 @@
     "    #'reg_lambda':0.1,\n",
     "}\n",
     "lr_train,lr_pred = cv_feat(LGBMClassifier,fold_cnt=5,params=tmp_params)\n",
-    "with open('../features/other_model_lgb7.pkl','wb') as fout:\n",
+    "with open('../2nd_features/other_model_lgb7.pkl','wb') as fout:\n",
     "    pickle.dump([lr_train,lr_pred],fout)"
    ]
   }
