try ens tomorrow

--- a/ensemble/xgb_ensemble-all.ipynb
+++ b/ensemble/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -11,77 +11,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'../features/cnn_1_aug1_feat.pkl'\n",
-      "'../features/cnn_1_aug_1_fold8_feat.pkl'\n",
-      "'../features/cnn_1_aug_rescale_preprocess_feat.pkl'\n",
-      "'../features/cnn_1_aug_skimage_denoise_feat.pkl'\n",
-      "'../features/cnn_1_aug_skimage_preprocess_feat.pkl'\n",
-      "'../features/cnn_1_feat.pkl'\n",
-      "'../features/cnn_2_aug1_feat.pkl'\n",
-      "'../features/cnn_2_aug_1_fold8_feat.pkl'\n",
-      "'../features/cnn_2_aug_denoise_preprocess_feat.pkl'\n",
-      "'../features/cnn_2_aug_rescale_preprocess_feat.pkl'\n",
-      "'../features/cnn_2_aug_skimage_preprocess_feat.pkl'\n",
-      "'../features/cnn_2_feat.pkl'\n",
-      "'../features/cnn_3_aug1_feat.pkl'\n",
-      "'../features/cnn_3_aug_1_fold8_feat.pkl'\n",
-      "'../features/cnn_3_aug_denoise_preprocess_feat.pkl'\n",
-      "'../features/cnn_3_aug_rescale_preprocess_feat.pkl'\n",
-      "'../features/cnn_3_aug_skimage_preprocess_feat.pkl'\n",
-      "'../features/cnn_4_aug1_feat.pkl'\n",
-      "'../features/cnn_4_aug1_feat_add_early.pkl'\n",
-      "'../features/cnn_4_aug_1_fold8_feat.pkl'\n",
-      "'../features/cnn_4_aug_denoise_preprocess_feat.pkl'\n",
-      "'../features/cnn_4_aug_rescale_preprocess_feat.pkl'\n",
-      "'../features/cnn_4_aug_skimage_preprocess_feat.pkl'\n",
-      "'../features/cnn_5_aug1_feat.pkl'\n",
-      "'../features/cnn_5_aug_1_fold8_feat.pkl'\n",
-      "'../features/cnn_5_aug_denoise_preprocess_feat.pkl'\n",
-      "'../features/cnn_5_aug_rescale_preprocess_feat.pkl'\n",
-      "'../features/cnn_5_aug_skimage_preprocess_feat.pkl'\n",
-      "'../features/incept_1_feat.pkl'\n",
-      "'../features/incept_aug1_feat.pkl'\n",
-      "'../features/incept_aug1_fold8_feat.pkl'\n",
-      "'../features/incept_aug2_feat.pkl'\n",
-      "'../features/incept_aug3_feat.pkl'\n",
-      "'../features/incept_aug4_feat.pkl'\n",
-      "'../features/other_feat.pkl'\n",
-      "'../features/other_model_gbrt.pkl'\n",
-      "'../features/other_model_gbrt2.pkl'\n",
-      "'../features/other_model_gbrt4.pkl'\n",
-      "'../features/other_model_gbrt5.pkl'\n",
-      "'../features/other_model_gbrt6.pkl'\n",
-      "'../features/other_model_lgb.pkl'\n",
-      "'../features/other_model_lgb2.pkl'\n",
-      "'../features/other_model_lgb4.pkl'\n",
-      "'../features/other_model_lgb5.pkl'\n",
-      "'../features/other_model_lgb6.pkl'\n",
-      "'../features/other_model_lr.pkl'\n",
-      "'../features/other_model_lr2.pkl'\n",
-      "'../features/other_model_lr4.pkl'\n",
-      "'../features/other_model_lr5.pkl'\n",
-      "'../features/other_model_lr6.pkl'\n",
-      "'../features/other_model_rf.pkl'\n",
-      "'../features/other_model_rf2.pkl'\n",
-      "'../features/other_model_rf4.pkl'\n",
-      "'../features/other_model_rf5.pkl'\n",
-      "'../features/other_model_rf6.pkl'\n",
-      "'../features/other_model_xgb.pkl'\n",
-      "'../features/other_model_xgb2.pkl'\n",
-      "'../features/other_model_xgb4.pkl'\n",
-      "'../features/other_model_xgb5.pkl'\n",
-      "'../features/other_model_xgb6.pkl'\n",
-      "'../features/resnet_1_feat.pkl'\n",
-      "'../features/resnet_aug1_feat.pkl'\n",
-      "'../features/resnet_aug1_fold8_feat.pkl'\n",
-      "'../features/resnet_aug2_feat.pkl'\n",
-      "'../features/resnet_aug3_feat.pkl'\n",
-      "'../features/resnet_aug4_feat.pkl'\n",
-      "'../features/vgg16_1_feat.pkl'\n",
-      "'../features/vgg_aug1_feat.pkl'\n",
-      "'../features/vgg_aug1_fold8_feat.pkl'\n",
-      "'../features/vgg_aug1_new_feat.pkl'\n",
-      "'../features/xception_aug1_feat.pkl'\n"
+      "'../features/cnn_1_aug1_feat.pkl',\n",
+      "'../features/cnn_1_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_1_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_1_aug_skimage_denoise_feat.pkl',\n",
+      "'../features/cnn_1_aug_skimage_preprocess_feat.pkl',\n",
+      "'../features/cnn_1_feat.pkl',\n",
+      "'../features/cnn_2_aug1_feat.pkl',\n",
+      "'../features/cnn_2_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_2_aug_denoise_preprocess_feat.pkl',\n",
+      "'../features/cnn_2_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_2_aug_skimage_preprocess_feat.pkl',\n",
+      "'../features/cnn_2_feat.pkl',\n",
+      "'../features/cnn_3_aug1_feat.pkl',\n",
+      "'../features/cnn_3_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_3_aug_denoise_preprocess_feat.pkl',\n",
+      "'../features/cnn_3_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_3_aug_skimage_preprocess_feat.pkl',\n",
+      "'../features/cnn_4_aug1_feat.pkl',\n",
+      "'../features/cnn_4_aug1_feat_add_early.pkl',\n",
+      "'../features/cnn_4_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_4_aug_denoise_preprocess_feat.pkl',\n",
+      "'../features/cnn_4_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_4_aug_skimage_preprocess_feat.pkl',\n",
+      "'../features/cnn_5_aug1_feat.pkl',\n",
+      "'../features/cnn_5_aug_1_fold8_feat.pkl',\n",
+      "'../features/cnn_5_aug_denoise_preprocess_feat.pkl',\n",
+      "'../features/cnn_5_aug_rescale_preprocess_feat.pkl',\n",
+      "'../features/cnn_5_aug_skimage_preprocess_feat.pkl',\n",
+      "'../features/incept_1_feat.pkl',\n",
+      "'../features/incept_aug1_feat.pkl',\n",
+      "'../features/incept_aug1_fold8_feat.pkl',\n",
+      "'../features/incept_aug2_feat.pkl',\n",
+      "'../features/incept_aug3_feat.pkl',\n",
+      "'../features/incept_aug4_feat.pkl',\n",
+      "'../features/other_feat.pkl',\n",
+      "'../features/other_model_gbrt.pkl',\n",
+      "'../features/other_model_gbrt2.pkl',\n",
+      "'../features/other_model_gbrt4.pkl',\n",
+      "'../features/other_model_gbrt5.pkl',\n",
+      "'../features/other_model_gbrt6.pkl',\n",
+      "'../features/other_model_lgb.pkl',\n",
+      "'../features/other_model_lgb2.pkl',\n",
+      "'../features/other_model_lgb4.pkl',\n",
+      "'../features/other_model_lgb5.pkl',\n",
+      "'../features/other_model_lgb6.pkl',\n",
+      "'../features/other_model_lr.pkl',\n",
+      "'../features/other_model_lr2.pkl',\n",
+      "'../features/other_model_lr4.pkl',\n",
+      "'../features/other_model_lr5.pkl',\n",
+      "'../features/other_model_lr6.pkl',\n",
+      "'../features/other_model_rf.pkl',\n",
+      "'../features/other_model_rf2.pkl',\n",
+      "'../features/other_model_rf4.pkl',\n",
+      "'../features/other_model_rf5.pkl',\n",
+      "'../features/other_model_rf6.pkl',\n",
+      "'../features/other_model_xgb.pkl',\n",
+      "'../features/other_model_xgb2.pkl',\n",
+      "'../features/other_model_xgb4.pkl',\n",
+      "'../features/other_model_xgb5.pkl',\n",
+      "'../features/other_model_xgb6.pkl',\n",
+      "'../features/resnet_1_feat.pkl',\n",
+      "'../features/resnet_aug1_feat.pkl',\n",
+      "'../features/resnet_aug1_fold8_feat.pkl',\n",
+      "'../features/resnet_aug2_feat.pkl',\n",
+      "'../features/resnet_aug3_feat.pkl',\n",
+      "'../features/resnet_aug4_feat.pkl',\n",
+      "'../features/vgg16_1_feat.pkl',\n",
+      "'../features/vgg_aug1_feat.pkl',\n",
+      "'../features/vgg_aug1_fold8_feat.pkl',\n",
+      "'../features/vgg_aug1_new_feat.pkl',\n",
+      "'../features/xception_aug1_feat.pkl',\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
     "\n",
     "fl = list(glob.glob('../features/*.pkl'))\n",
     "for l in sorted(fl):\n",
-    "    print(\"'{}'\".format(l))\n",
+    "    print(\"'{}',\".format(l))\n",
     "    \n",
     "# no other feat7 "
    ]
